--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -106,3 +106,7 @@
  liemarian.18.b: "We can't abandon the emperor."
 
  wirosepan_center_of_reformation: "Center of Restoration"
+
+ untameable_fervor_mod: "Untameable Fervor"
+ desc_untameable_fervor_mod: "Our people are ready to declare a war against infidels."
+ call_crusade_block_tt: "We need to have either 'Untameable Fervor' or 'Vicarial Sanction of War' modifiers in order to declare the Bellum Angelicum."
