--- a/localisation/messages_l_english.yml
+++ b/localisation/messages_l_english.yml
@@ -4664,39 +4664,39 @@
  OWNTRADEALLOW_LOG: "We have opened our provinces to the merchants from $RECIPIENT$."
  TRADEALLOW_LOG: "$ACTOR$ allows our merchants access to their provinces again!"
  TRADEALLOWOTHER_LOG: "$ACTOR$ allows the merchants of $RECIPIENT$ access to their provinces again!"
- CRUSADEONUS_TITLE: "Called Bellum Sanctum"
+ CRUSADEONUS_TITLE: "Called Bellum Angelicum"
  CRUSADEONUS_SETUP: "When the Episcopal Controller calls for a Crusade against us."
  CRUSADEONUS_HEADER: "Herald from"
  CRUSADEONUS_1: "$ACTOR$"
  CRUSADEONUS_2: "$MONARCHTITLE$, the Saelian Infidels have called for a"
- CRUSADEONUS_3: "BELLUM SANCTUM"
+ CRUSADEONUS_3: "BELLUM ANGELICUM"
  CRUSADEONUS_4: "against"
  CRUSADEONUS_5: "US!"
  CRUSADEONUS_6: "Infidel soldiers will flock to the banners of Liemarian countries at war with us."
- CRUSADEONUS_LOG: "The Pope ($ACTOR$) has called for a Bellum Sanctum against us."
+ CRUSADEONUS_LOG: "The Pope ($ACTOR$) has called for a Bellum Angelicum against us."
  CRUSADEONUS_BTN1: "OK"
  CRUSADEONUS_BTN2: "OK"
  CRUSADEONUS_BTN3: "Go to"
- CRUSADEONOTHER_TITLE: "Called Bellum Sanctum"
+ CRUSADEONOTHER_TITLE: "Called Bellum Angelicum"
  CRUSADEONOTHER_SETUP: "When the Episcopal Controller calls for a Crusade against another country."
  CRUSADEONOTHER_HEADER: "Herald from"
  CRUSADEONOTHER_1: "$ACTOR$"
  CRUSADEONOTHER_2: "$MONARCHTITLE$, "
  CRUSADEONOTHER_3: "The Pope ($ACTOR$)"
- CRUSADEONOTHER_4: "has called for a Bellum Sanctum against"
+ CRUSADEONOTHER_4: "has called for a Bellum Angelicum against"
  CRUSADEONOTHER_5: "$RECIPIENT$"
- CRUSADEONOTHER_LOG: "The Episcopus ($ACTOR$) has called for a Bellum Sanctum against $RECIPIENT$."
+ CRUSADEONOTHER_LOG: "The Episcopus ($ACTOR$) has called for a Bellum Angelicum against $RECIPIENT$."
  CRUSADEONOTHER_BTN1: "OK"
  CRUSADEONOTHER_BTN2: "OK"
  CRUSADEONOTHER_BTN3: "Go to"
- WECRUSADE_TITLE: "Called Bellum Sanctum"
- WECRUSADE_SETUP: "When we call for a Bellum Sanctum against another country."
+ WECRUSADE_TITLE: "Called Bellum Angelicum"
+ WECRUSADE_SETUP: "When we call for a Bellum Angelicum against another country."
  WECRUSADE_HEADER: "$MESSENGER$"
- WECRUSADE_1: "Bellum Sanctum"
+ WECRUSADE_1: "Bellum Angelicum"
  WECRUSADE_2: "$MONARCHTITLE$,"
  WECRUSADE_3: "$RECIPIENT$"
  WECRUSADE_4: "will soon learn to fear the might of Saelianism!"
- WECRUSADE_LOG: "We have called for a Bellum Sanctum against $RECIPIENT$."
+ WECRUSADE_LOG: "We have called for a Bellum Angelicum against $RECIPIENT$."
  WECRUSADE_BTN1: "OK"
  WECRUSADE_BTN2: "OK"
  WECRUSADE_BTN3: "Go to"
