--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -4160,7 +4160,7 @@
  desc_tax_revolt: "Peasant insurgents have seized the province, stubbornly refusing to pay taxes."
  heretic_country: "Heretic Country"
  desc_heretic_country: "We have adopted a slightly different interpretation of the Faith."
- crusader: "Crusade"
+ crusader: "Bellum Angelicum"
  desc_crusader: "We are engaged in the Holy War against the Infidel. God shall grant us victory!"
  excommunication: "Excommunication"
  desc_excommunication: "Our ruler has been excommunicated. May God have mercy on the sinner's soul!"
@@ -4208,25 +4208,25 @@
  TOLERANCE_HERETIC: "Tolerance of the Heretical Beliefs"
  TOLERANCE_HEATHEN: "Tolerance of the Heathen Beliefs"
  CARDINAL_NOT_READY: "The Cardinal has been influenced too recently. We must wait until "
- CALL_CRUSADETITLE: "Call for Crusade"
- CALL_CRUSADENEWDESC: "Do you wish to call for a Crusade against $COUNTRY$? This will give Catholic countries a significant manpower and income bonus while at war with the Infidel."
- CALL_CRUSADEDESC: "Crusades give Catholic countries a significant manpower and income bonus while at war with them."
- HASCALL_CRUSADE: "We have already called for a Crusade against them."
+ CALL_CRUSADETITLE: "Call for Bellum Angelicum"
+ CALL_CRUSADENEWDESC: "Do you wish to call for a Bellum Angelicum against $COUNTRY$? This will give Liemarian countries a significant manpower and income bonus while at war with the Infidel."
+ CALL_CRUSADEDESC: "Bellum Angelicum gives Liemarian countries a significant manpower and income bonus while at war with them."
+ HASCALL_CRUSADE: "We have already called for a Bellum Angelicum against them."
  EXCOMMUNICATETITLE: "Excommunicate"
- EXCOMMUNICATENEWDESC: "Do you wish to excommunicate $MONARCH$? Neighboring Catholic countries will not need a Casus Belli against $COUNTRY$."
- EXCOMMUNICATEDESC: "Excommunication will allow neighboring Catholic nations to declare war on them without suffering the normal stability hit of lacking a Casus Belli."
+ EXCOMMUNICATENEWDESC: "Do you wish to excommunicate $MONARCH$? Neighboring Liemarian countries will not need a Casus Belli against $COUNTRY$."
+ EXCOMMUNICATEDESC: "Excommunication will allow neighboring Liemarian nations to declare war on them without suffering the normal stability hit of lacking a Casus Belli."
  HASEXCOMMUNICATE: "We have already excommunicated them."
  EXCOM_NO_RULER: "They currently have no ruler to excommunicate."
- EXCOM_WRONG_RELIGION: "We can only excommunicate Catholics."
+ EXCOM_WRONG_RELIGION: "We can only excommunicate Liemarians."
  EXCOM_NOT_READY: "We cannot excommunicate rulers left and right! We must wait, at least until "
  EXCOMMUNICATED: "Excommunicated"
- EXCOMMUNICATED_DESC: "The Episcopus Maximus has seen fit to excommunicate this ruler. Neighboring Catholic countries can declare war without incurring the normal stability hits."
+ EXCOMMUNICATED_DESC: "The Episcopus Maximus has seen fit to excommunicate this ruler. Neighboring Liemarian countries can declare war without incurring the normal stability hits."
  IS_EXCOMMUNICATED: "Is excommunicated "
  IS_NOT_EXCOMMUNICATED: "Is not excommunicated "
- CRUSADE: "Bellum Sanctum"
- CRUSADE_DESC: "Liemarians all over the world are encouraged to attack §Y$NAME$§W in the name of Our Lord! The Crusade will last until $DATE$ or until the Infidel has been destroyed."
- ALREADY_CRUSADING: "The Episcopus Maximus has already launched a Bellum Sanctum. We must wait for it to end before calling another."
- CRUSADE_SAME_RELIGION: "While tempting, we cannot launch a Bellum Sanctum against fellow Saelian, heretics or not."
+ CRUSADE: "Bellum Angelicum"
+ CRUSADE_DESC: "Liemarians all over the world are encouraged to attack §Y$NAME$§W in the name of Our Lord! The Bellum Angelicum will last until $DATE$ or until the Infidel has been destroyed."
+ ALREADY_CRUSADING: "The Episcopus Maximus has already launched a Bellum Angelicum. We must wait for it to end before calling another."
+ CRUSADE_SAME_RELIGION: "While tempting, we cannot launch a Bellum Angelicum against fellow Saelian, heretics or not."
  BOGOMILIST: "Bogomilist"
  WALDENSIAN: "Waldensian"
  FRATICELLI: "Fraticelli"
@@ -6330,8 +6330,8 @@
  REM_TEMP_CLAIM_EFFECT: "Lose temporary claim on §Y$PROV$§W.\n"
  IS_NOT_WASTELAND: " is NOT a wasteland"
  IS_WASTELAND: " is a wasteland"
- IS_NOT_CRUSADE_TARGET: "Is NOT the target of a Crusade"
- IS_CRUSADE_TARGET: "Is the target of a Crusade"
+ IS_NOT_CRUSADE_TARGET: "Is NOT the target of a Bellum Angelicum"
+ IS_CRUSADE_TARGET: "Is the target of a Bellum Angelicum"
  CV_RULEDBY: "$NAME$ $SURNAME$"
  DIPRELCH_SAMEDYNASTY: "Same Dynasty"
  DIPRELCH_BANNED: "Banned by the SE"
@@ -7013,7 +7013,7 @@
  NO_ADVISOR: "No Advisor"
  CONVREL_KINGFORCED: "We have been forced to change religion, and cannot change religion under the current ruler we have."
  OFFENSEDESCR: " "
- CRUSADE_TOO_DISTANT: "These infidels are too distant a target for a Crusade."
+ CRUSADE_TOO_DISTANT: "These infidels are too distant a target for a Bellum Angelicum."
  EXCOM_NOT_LESSER_UNION: "You may only target the senior partner in a Personal Union."
  UNION_TAG_DESC: "Since §Y$COUNTRY$§W is a union of all §Y$GROUP$§W cultures, those cultures are fully integrated and suffer no penalties."
  tribal_despotism_reform_rotw_reform_title: "Reform the Government"
