eastern pagans + religion cleaning

--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -162,6 +162,10 @@
  harmonized_salbar: "Harmonized Salbar"
  desc_harmonized_salbar: "We have succesfully harmonized with Salbar"
 
-
+ merhaan.1015.t: "Harmonization of Eastern Pagan Faiths"
+ merhaan.1015.desc: "There are subjects that don't believe in gods of more systematized faiths, instead they are believing in local ghosts, spirits and gods. But our efforts to integrate them into our church changed that, sharing their knowledge of the world with our shamans. Small statues and altars are now more popular in our country and some officials started to honour their traditions."
+ merhaan.1015.a: "Closer to truth"
+ harmonized_eastern_pagan: "Harmonized Eastern Pagan"
+ desc_harmonized_eastern_pagan: "We have succesfully harmonized with Eastern Pagans"
 
 
