--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -938,3 +938,6 @@
  bariqa_area: "Bariqa"
  ephraikever_area: "Ephraikever"
  mustir_area: "Mustir"
+
+ gamai_area: "Gamai"
+ dyakai_area: "Dyakai"
