--- a/localisation/TD_01_flavour_bogiland_l_english.yml
+++ b/localisation/TD_01_flavour_bogiland_l_english.yml
@@ -79,7 +79,7 @@
  bogilish_my_house_my_domain_desc: "The concept of feudalism never really caught in Bogiland. While a king had many subjects, he didn't own the land of his subjects - it resembled much more tributary system than imperial land renting."
 
  
- BOG_right_of_domain: "Right of Domain"
- BOG_right_of_domain_desc: "Our nobility enjoys the privilege of their land being protected from seizure by the crown and guaranteed support in case of a natural disaster."
+ BOG_right_of_domain_reform: "Right of Domain"
+ BOG_right_of_domain_reform_desc: "Our nobility enjoys the privilege of their land being protected from seizure by the crown and guaranteed support in case of a natural disaster."
  BOG_crown_appointed_bureaucrats: "Crown Appointed Bureaucrats"
  BOG_crown_appointed_bureaucrats_desc: "Many rural provinces are ruled by judges appointed by the crown, but their positions often overlap with the local dominant noble dynasty."
