--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -790,3 +790,11 @@
 
  decision_abandon_nevledi_title: "Abandon Nevledi"
  decision_abandon_nevledi_desc: "The kingdom of Nevledi has fallen into the arms of the enemy"
+
+ imperial_mercantilism_reform: "Imperial Mercantitlism"
+ imperial_mercantilism_reform_desc: "Thanks to the variety of lands in the empire, Saelia can easily produce most things on her own and export the luxuries to our more impoverished neighbours."
+ assistant_legates_reform: "Assistant Legates"
+ assistant_legates_reform_desc: "In order to smoothen the administration in our internal lands, we will assign legates to our provinces, which will oversee the land and be only to our ruler."
+
+ the_army_of_sal_reform: "The Army of Sal"
+ the_army_of_sal_reform_desc: "Rise, all the faithful of Sal! The hour has struck to end the heathenous reign of all the pagans and heretics, to finally unite the humanity under one banner."
