--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  geoberic_bay_tradenode: "Bay of Callaina"
  niheyan_coast_tradenode: "Niheyan Coast"
- bogiland_tradenode: "Bogiland"
+ bogiland_tradenode: "Doniepr"
  ostsee_tradenode: "Ostsee"
  limstadt_tradenode: "Limstadt"
  magstadt_tradenode: "Magstadt"
