--- a/localisation/scandinavia_l_english.yml
+++ b/localisation/scandinavia_l_english.yml
@@ -3766,7 +3766,7 @@
  free_trade_reform_desc: "Merchants from all of the world should be able to travel into our lands to engage with our population in trade and commerce. Abandoning the narrowness of mercantalism, the state gains an easier access to foreign thoughts."
  mechanic_monarch_power_on_institutions_yes: "Embracing an Institution now gives §G100§! Monarch Power of each category"
  mechanic_free_improve_inland_routes_yes: "The Trading Policy '§YImprove Inland Routes§!' no longer requires trade power to be used"
- lockean_proviso_reform: "Lockean Proviso"
+ lockean_proviso_reform: "Natural Property Rights"
  lockean_proviso_reform_desc: "Unused property is a waste to both nature and the state. By introducing and emphasizing hard goods which yield utility over periods of time, the people can exchange their exessive possessions without offending the natural law. The government would moderate the conflict between accumulation of property and distribution of wealth."
  embrace_the_economic_theory_reform: "Embrace the Economic Theory"
  embrace_the_economic_theory_reform_desc: "The economy plays an undeniably important role within the apparatus of the state. The complex systems of trade, finance and luxury need to be tamed to serve the health of the government."
