--- a/localisation/TD_01_flavour_chilverchia_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchia_l_english.yml
@@ -15,7 +15,7 @@
  chilverchia_war_poets: "War Poets"
  chilverchia_war_poets_desc: "Tales of our glory and victories are a part of our culture. Every child in our country knows at least 3 poems about military successes of our state."
  chilverchia_stable_society: "Stable Society"
- chilverchia_stable_society_desc: "Every citizen understands their role in life causing people to be more accepting in time of crises"
+ chilverchia_stable_society_desc: "Every citizen understands their role in life causing people to be more accepting in time of crises."
  chilverchia_rightful_rule: "Rightful Rule"
  chilverchia_rightful_rule_desc: "People of every nationality understand that our rule is the most legitimate and prosperity grows under our administration."
 
