--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -13,7 +13,7 @@
  sigilian_rebels_demand: "Convert $COUNTRYNAME$"
 
  eneratian: "Eneratian"
- eneratian_religion_desc: "Eneratianism is the second biggest branch of the Saelian church. It was created during the II century civil war in Saelian faith in which Sigilius in the west and Eneratus in the east both fought for the emperorship. Supporters of Eneratus rejected the idea of tetrarchy and adopted patrimonial doctrine of power. After Eneratian male line became extinct, the church was split between different bishops and became Autokefalic in this process. \n\nJust as Sigilianism, in early days it heavily relied syncretism with local folklores, while still maintaining monotheistic worldview. In 1444 these differences aren't as clear but the influence of local culture still can be seen in regional rites and traditions."
+ eneratian_religion_desc: "Eneratianism is the second biggest branch of the Saelian church. It was created during the II century civil war of the Saelian faith in which Sigilius in the west and Eneratus in the east both fought for emperorship. Supporters of Eneratus rejected the idea of the tetrarchy and adopted a patrimonial doctrine of power. After the Eneratian male line became extinct, the church was split between different bishops and turned autocephalous in this process. \n\nJust as Sigilianism, in early days it heavily relied on syncretism with local folklores, while still maintaining a monotheistic worldview. In 1444 these differences aren't as clear but the influence of local cultures can still be seen in regional rites and traditions."
  vashirani: "Vashirani"
  restaurers: "Restaurers"
  eneratian_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
@@ -52,7 +52,7 @@
  Yaltaban: "Yaltaban"
 
  wirosepan: "Wirosepan"
- wirosepan_religion_desc: "When the Saelian missionaries reached the Dorchean isles they had to take a new approach to their mission. They presented the Emperor Saelius as a god-like and omnipotent figure of a brave warrior seeking to establish his realm on earth. This idea quickly spread  even without the need of missionaries, but some time after the popularization of Universalist ideals in the isles it became a dying faith with little prospect of survival - unless someone shook the very foundation of Saelian church."
+ wirosepan_religion_desc: "When the Saelian missionaries reached the Dorchean isles they had to take a new approach to their mission. They presented the Emperor Saelius as a god-like and omnipotent figure of a brave warrior seeking to establish his realm on earth. This idea quickly spread even without the need of missionaries, but some time after the popularization of Universalist ideals in the isles it became a dying faith with little prospect of survival - unless someone shook the very foundation of Saelian church."
  wirosepan_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  wirosepan_rebels_title: "Religious"
  wirosepan_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
