--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -32,8 +32,8 @@
  wyrmegnac_castle: "Wyrmegnac Castle"
  wyrmegnac_castle_desc: "Important historical and cultural site, from which many kings of Argenia ruled."
 
- talat_jadida: "Talat Jadida"
- talat_jadida_desc: "Beutifuly decorated with many religious stories, but also heavily fortified, palace."
+ talat_jadida: "Harehad"
+ talat_jadida_desc: "Beutifuly decorated with many religious stories, but also heavily fortified, palace. It was constructed near the hometown of Yaltazim prophet and scholar Ehad."
 
  magkirche_cathedral: "Magkirche Cathedral"
  magkirche_cathedral_desc: "The most magnificent cathedral in the entire saelian world."
@@ -42,7 +42,7 @@
  nordkirche_cathedral_desc: "Soon to be the most magnificent cathedral in the entire saelian world."
 
  church_of_saint_gerard: "Church of Saint Gérard"
- church_of_saint_gerard_desc: "This pagan temple was converted into a saelian church by the Eneratian Emperor in the III century."
+ church_of_saint_gerard_desc: "This pagan temple was converted into a saelian church by the Eneratian Emperor in the 3rd century."
 
  mepis_tadzar: "Mepis Tadzar"
  mepis_tadzar_desc: "Magnificent Tomb turned into a cathedral, vital to the history of Zakarturi Empire."
