--- a/localisation/TD_01_flavour_donucakar_l_english.yml
+++ b/localisation/TD_01_flavour_donucakar_l_english.yml
@@ -25,3 +25,9 @@
  DON_newfound_confidence: "Newfound Confidence"
  desc_DON_newfound_confidence: "The nobles finally see hope in our future - our enemies will tremble before us."
  has_won_kanlabi_tt: "Has won a battle in §YKanlabi§!"
+
+ armed_monasteries_reform: "Armed Monasteries"
+ armed_monasteries_reform_desc: "In order to protect our kingdom from neighboring heathens, every monastery will be trained to autonomously defend themselves."
+ gov_militarized_churches: "Militarized Churches"
+ desc_gov_militarized_churches: "Sacred places in this province have been militarized to effectively fight back against invaders."
+ mechanic_military_churches_attribute_yes: "Temple buildings now grant §YLocal Hostile Attrition§! and §YLocal Manpower Modifier§!."
