--- a/localisation/TD_01_flavour_silvestria_l_english.yml
+++ b/localisation/TD_01_flavour_silvestria_l_english.yml
@@ -265,3 +265,10 @@
 
  the_high_counts_reform: "The High Counts"
  the_high_counts_reform_desc: "Due to the complexity of Saelian law, some of the feudal subjects of our ruler from before obtaining the emperorship are separately classified as Hochgrafen. This title is often seen as more prestigious and privileged than that of the average noble, leading to them being a more loyalist class."
+
+ waldrodung_reform: "Waldrodung"
+ waldrodung_reform_desc: "By diverting some of our administrative cadre to more effectively manage the new territory, we will have an easier time directing the construction and further expansion."
+ woods_forest_buff_mod: "Reduced Forest Penalties"
+ desc_woods_forest_buff_mod: "This province benefits from increased effectiveness of further development."
+ mechanic_reduced_woods_forest_penalties_yes: "Reduced development cost penalties in §YWoods§! and §YForest§! terrains."
+ woods_forest_buff_tt: "Development Cost in §YForest§! and §YWoods§! terrains: §G-10.0%§!"
