--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -12,7 +12,7 @@
  tetrarch_reform_desc: "Tetrarchy"
 
  usra_reform: "Usra"
- usra_reform_desc: "Usra DESC"
+ usra_reform_desc: "Fawudian clans are often clearly divided and hermetic groups, often distrusting one another and keeping all power within the clan."
  USRA: "Usra"
  GRAND_USRA: "Grand Usra"
  ABUSRA: "Abusra"
@@ -21,7 +21,7 @@
  GRAND_AMUSRA: "Grand Amusra"
 
  marstonian_pirate_reform: "Marstonian Pirates"
- marstonian_pirate_reform_desc: "Marstonian Pirates DESC"
+ marstonian_pirate_reform_desc: "Marstonian Pirates hold a grudge against their continental bretherens for exiling the legendary pirate lady Mutova."
  mechanic_legitimacy_from_raids_yes: "Gain 0.5 Legitimacy for each Slave Raid"
 
  acerbic_march_reform: "Marcha Acerba"
