--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -798,3 +798,10 @@
 
  the_army_of_sal_reform: "The Army of Sal"
  the_army_of_sal_reform_desc: "Rise, all the faithful of Sal! The hour has struck to end the heathenous reign of all the pagans and heretics, to finally unite the humanity under one banner."
+
+ imperial_military_academy_reform: "Imperial Military Academy"
+ imperial_military_academy_reform_desc: "The academy of Magstadt was founded by the emperor Wolfgang II von Schlaufberg, following the trend of establishing more professional engineering and officer corps."
+
+ reformed_diet_reform: "Reformed Diet"
+ reformed_diet_reform_desc: "In order to give more power to the emperor, the inner workings of imperial diet have been standardized and formalized."
+ mechanic_gain_ia_from_parliament_yes: "Winning Issues in the Parliament grants §G5§! Imperial Authority."
