--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -789,7 +789,7 @@
  TD_Empire_Provinces_Get_tt: "§YEmpire provinces get:§!"
 
  decision_abandon_nevledi_title: "Abandon Nevledi"
- decision_abandon_nevledi_desc: "The kingdom of Nevledi has fallen into the arms of the enemy"
+ decision_abandon_nevledi_desc: "The kingdom of Nevledi has fallen into the arms of the enemy. We have to yield our claim to this land if we want to appease the imperial princes."
 
  imperial_mercantilism_reform: "Imperial Mercantitlism"
  imperial_mercantilism_reform_desc: "Thanks to the variety of lands in the empire, Saelia can easily produce most things on her own and export the luxuries to our more impoverished neighbours."
