--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -43,7 +43,7 @@
  liemarian_rebels_demand: "Convert $COUNTRYNAME$"
 
  agellidian: "Agellidian"
- agellidian_religion_desc: "Idea of this faith was sparked by 15th century Altaciman poet and philosopher Agellid Yablan Huzamjarban who proposed that the Emperor Saelius was one of the Yaltazim prophets and his word should be treated as such. This belief became especially popular amongst the urban population in Novoregno between XVI and XVII centuries and, with the growing influence of Liemarianism, became state religilon."
+ agellidian_religion_desc: "The idea of this faith was sparked by XVth century when an Altaciman poet and philosopher Agellid Yablan Huzamjarban, proposed that the Emperor Saelius was one of the Yaltazim prophets and his word should be treated as such. This belief became especially popular amongst the urban population in Novoregno between XVI and XVII centuries and, with the growing influence of Liemarianism, became the state religilon."
  agellidian_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  agellidian_rebels_title: "Religious"
  agellidian_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -52,7 +52,7 @@
  Yaltaban: "Yaltaban"
 
  wirosepan: "Wirosepan"
- wirosepan_religion_desc: "When the Saelian missionaries reached the Dorchean isles they had to take a new approach to their mission. They presented the Emperor Saelius as a god-like and omnipotent figure of a brave warrior seeking to establish his realm on earth. This idea quickly spread even without the need of missionaries, but some time after the popularization of Universalist ideals in the isles it became a dying faith with little prospect of survival - unless someone shook the very foundation of Saelian church."
+ wirosepan_religion_desc: "When the Saelian missionaries reached the Dorchean isles, they had to take a new approach to their mission. They presented the Emperor Saelius as a god-like and omnipotent figure of a brave warrior seeking to establish his realm on earth. This idea quickly spread even without the need of missionaries, but some time after the popularization of Universalist ideals in the isles it became a dying faith with little prospect of survival - unless someone shook the very foundation of Saelian church."
  wirosepan_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  wirosepan_rebels_title: "Religious"
  wirosepan_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -70,7 +70,7 @@
  YERMIC_CRUSADE: "Jihad"
 
  yaltazim: "Yaltazim"
- yaltazim_religion_desc: "Yaltazimi are the followers of god Ilum who sents prophets on earth to teach people about pious and good life. Believers of this faith follow a plethora of prophets whose works and teachings are the fundaments of Yaltazim faith. First yaltazimi believers were victims of religious persecution in muzbah for following the teachings of prophet Nathaniel in the VIII century BCE."
+ yaltazim_religion_desc: "The Yaltazimi are the followers of the god Ilum who sends prophets on earth to teach people about a pious and good life. Believers of this faith follow a plethora of prophets whose works and teachings are the foundation of the Yaltazim faith. The First yaltazimi believers were victims of religious persecution in muzbah for following the teachings of prophet Nathaniel in the VIII century BCE."
  ifritican_sect: "Ifritican Sect"
  yaltazim_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  yaltazim_rebels_title: "Religious"
@@ -79,7 +79,7 @@
  yaltazim_rebels_demand: "Convert $COUNTRYNAME$"
 
  musarfic_folklore: "Musarfic Folklore"
- musarfic_folklore_desc: "Musarfic Folklore represents variety of beliefs and cults in fawud desert. They believe that many gods lived Among Us in the past and died the same way a person does. It is common for families to proclaim one of the past gods as their ancestor and use this as a symbol of clan identity."
+ musarfic_folklore_desc: "Musarfic Folklore represents variety of beliefs and cults in the fawud desert. They believe that many gods lived Among Us in the past and died the same way a person does. It is common for families to proclaim one of the past gods as their ancestor and use this as a symbol of clan identity."
  ilumim: "Ilumim"
  musarfic_folklore_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  musarfic_folklore_rebels_title: "Religious"
@@ -88,7 +88,7 @@
  musarfic_folklore_rebels_demand: "Convert $COUNTRYNAME$"
 
  ilumist: "Ilumist"
- ilumist_religion_desc: "Ilumists are the followers of god Ilum who sents prophets on earth to teach people about pious and good life. Members of this church follow only a specific set of prophets which hasn't changed for past 2000 years."
+ ilumist_religion_desc: "Ilumists are the followers of god Ilum who sent prophets on earth to teach people about a pious and good life. Members of this church follow only a specific set of prophets which hasn't changed for past 2000 years."
  tahimali: "Tahimali"
  ilumist_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  ilumist_rebels_title: "Religious"
@@ -105,7 +105,7 @@
  mud_cult: "Mud Cult"
 
  eopedian: "Eopedian"
- eopedian_religion_desc: "The roots of this faith can be tracked to Ilumist sects in Qarasam who syncretices their beliefs with Uttarian dualistic view of the world, but it was de facto founded by Yatun who was a unified of the entire Visparaya in the Xth century. Doctrines of this religion changes across the many rulers and states, but overall is seen as an attempt to merge monotheistic Ilumist religion with multiple Hestani faiths."
+ eopedian_religion_desc: "The roots of this faith can be tracked to Ilumist sects in Qarasam who syncretised their beliefs with the Uttarian dualistic view of the world. It was de facto founded by Yatun who was a unifier of Visparaya in the Xth century. Doctrines of this religion have changed across the many rulers and states, but overall is seen as an attempt to merge the monotheistic Ilumist religion with multiple Hestani faiths."
  nah_jadid: "Nah Jadid"
  eopedian_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  eopedian_rebels_title: "Religious"
@@ -120,7 +120,7 @@
 
 
  sointuva: "Sointuva"
- sointuva_religion_desc: "Sointuva is the name of ancient pagan practices and mythology common among Pohjoista people. Central tenet is the fight of Hurskas (good people of god) against Ilkeä (evil enemies of god). This faith claims that the world was created by a good god, but then evil spirit created evil in it, so in response god created humanity to rule over and protect his creation."
+ sointuva_religion_desc: "Sointuva is the name of ancient pagan practices and mythology common among Pohjoista people. The central tenet is the fight between the Hurskas (good people of god) against Ilkeä (evil enemies of god). This faith claims that the world was created by a good god, but then an evil spirit created evil in it, so in response god created humanity to rule over and protect his creation."
  Hoirioton: "Häiriötön"
  sointuva_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  sointuva_rebels_title: "Religious"
@@ -143,7 +143,7 @@
  samadio_taedian: "Samadio-Mysentrian"
 
  marstonic_pantheon: "Marstonic Pantheon"
- marstonic_pantheon_religion_desc: "Zbojano-Marstonian pantheon of gods was wildly practiced in north-eastern mysentria until the arrival of Saelianism. They believe in a court of gods led by Dievo, god of power and loyalty. Many of their myths revolve around struggle of a man against nature and divine punishment."
+ marstonic_pantheon_religion_desc: "Zbojano-Marstonian pantheon of gods was widely practiced in north-eastern mysentria until the arrival of Saelianism. They believe in a court of gods led by Dievo, the god of power and loyalty. Many of their myths revolve around struggle of a man against nature and divine punishment."
  marstonic_pantheon_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  marstonic_pantheon_rebels_title: "Religious"
  marstonic_pantheon_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -211,7 +211,7 @@
  hestani: "Hestani"
 
  nahitar: "Nahitar"
- nahitar_religion_desc: "This faith represents the belief which were originated by yermic migrants in the Hestani basin. It is believed that all spirits and gods are divided into the higher gods, which hold power over the spiritual and material plane, and lesser gods which can influence the human world. The core of this religion consists of monolatristic cult of higher river and mountain gods who are sometimes depicted as animals or even humans, of which most important of those are Fadi and Rasus, representing the great rivers of Hestan.\nAs of 1444 the religions is slowly being replaced by newer Eopedian and Kausali faiths. True Nahiat believers wait for a miracle to finally unify the faith under singular doctrine."
+ nahitar_religion_desc: "This faith represents the belief which originated from yermic migrants in the Hestani basin. It is believed that all spirits and gods are divided into the higher gods, which hold power over the spiritual and material plane, and the lesser gods which can influence the human world. The core of this religion consists of monolatristic cult of higher river and mountain gods who are sometimes depicted as animals or even humans, of which most important of those are Fadi and Rasus, representing the great rivers of Hestan.\nAs of 1444 the religions is slowly being replaced by the newer Eopedian and Kausali faiths. True Nahiat believers wait for a miracle to finally unify the faith under singular doctrine."
  nahitar_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  nahitar_rebels_title: "Religious"
  nahitar_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -220,7 +220,7 @@
  radists: "Radists"
 
  uttarian: "Uttarian"
- uttarian_religion_desc: "The core of Uttarian religion emphasises the dual nature of the world which is controlled by Abadih and Anoxwardan, who rule the Earth alternately in a cyclic pattern. This religion is characterized by complex cosmology with numerous lesser gods and deities."
+ uttarian_religion_desc: "The core of the Uttarian religion emphasises the dual nature of the world which is controlled by Abadih and Anoxwardan, who rule the Earth alternately in a cyclic pattern. This religion is characterized by complex cosmology with numerous lesser gods and deities."
  uttarian_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  uttarian_rebels_title: "Religious"
  uttarian_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
