--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -1,23 +1,24 @@
 ﻿l_english:
-## Ideas
-chilverchian_march_ideas: "Chilverchian March Ideas"
-chilverchian_march_ideas_start: "Chilverchian March Traditions"
-chilverchian_march_ideas_bonus: "Chilverchian March Ideas"
+ ## Ideas
+ chilverchian_march_ideas: "Chilverchian March Ideas"
+ chilverchian_march_ideas_start: "Chilverchian March Traditions"
+ chilverchian_march_ideas_bonus: "Chilverchian March Ideas"
 
-marchien_foreign_army: "Foreign Army"
-marchien_foreign_army_desc: "We resorted to using mercenaries when we had problems to mobilise our local population"
-marchien_noble_court: "Noble Court"
-marchien_noble_court_desc: "Our court is composed from the greatest nobles of Chilverchia. Because of that we are very prestigous and corruption is low"
-marchien_spread_the_word: "Spread The Word"
-marchien_spread_the_word_desc: "When we decided to conquest these lands we also bringed clergy with us to convert these lands. They will show them the proper way"
-marchien_mobile_warfare: "Mobile warfare"
-marchien_mobile_warfare_desc: "Our military is mostly based on idea of cavalry making us more mobile than typical army. We should expand this idea so we can outmaneuver our enemies"
-marchien_outside_ideas: "Outside Ideas"
-marchien_outside_ideas_desc: "Conquering these lands allowed us to discover new innovations. We should use everything in our power to expand chilverchian knowledge"
-marchien_powerful_inquisition: "Powerful Inquisition"
-marchien_powerful_inquisition_desc: "Heresies are like plague that is infecting our faith. Because of that our inquisition recieved more powers to combat that"
-marchien_cavalry_culture: "Cavalry Culture"
-marchien_cavalry_culture_desc: "Huge focus on knighthood and horse riding allows us to create one of the best in terms of cavalry."
+ marchien_lordly_tribute: "Lordly Tribute"
+ marchien_lordly_tribute_desc: "The Marchien lords ruling over foreign lands, in hastily redecorated castles grow ever impatient, living in squalor compared to their ancestors who dined on grand banquets in Chilverchia. The peasants should be overjoyed that unlike their previous overlords, who lacked any sense of valour or integrity, our knights are the pinnacles of chivalry, and will protect this land to their death.\n\nSurely for such an honourable cause requires additional taxes to fund some luxuries for the ever exhausted lords, who so diligently file paperwork. Some new lances and fine clothes will greatly aid their morale, ensuring quality work to continue happening in the conquest and administration of new lands. Although processing these new taxes will create a larger workload.."
+  marchien_golden_privileges: "Golden Privileges"
+ marchien_golden_privileges_desc: "The Marchien courts rely heavily on the counsel of the noble families sworn to the crown, guaranteeing their privileges but also reminding their responsibility in governorship. To keep the grand feasts and glamorous weddings with roast duck, nobles were required to maintain their fiefs with precision, noting every person that came in and out of their territory to keep order.\n\nWith these increased privileges, the work has increased, but also the festivities, surely now they have no time to conspire against anything with their hands so full. Although they might want to stop drinking excessively, only for a day before the royal diet is called."
+  marchien_armoured_clerics: "Armoured Clerics"
+ marchien_armoured_clerics_desc: "Some might imagine Saelian priests as frail, old, learned men who quietly lead sermons in dark churches. The clerics on the Eneratian frontier however, defy all expectations. Young knights clad in plate armour, with various scriptures and talismans adorning their frames travel all across the lands, spreading the word of Eneratus to all that will listen.\n\nPassionate and determined, they are not afraid to tread upon hostile grounds and preach the faith, not shying away from a brawl caused by their presence. They often try to reach areas where the local faith is highly entrenched, to achieve the difficult task of converting large swathes of unbelievers to the Eneratian faith./n/n”I find your lack of faith disturbing.”\n-unknown Eneratian missionary."
+ marchien_reforming_marchien_administraion: "Reforming Marchien Administration"
+ marchien_reforming_marchien_administraion_desc: "The highly militarised Chilverchian marches have had some successes in conquests, but have struggled in creating functional policies past increased taxation. The nobility has been gathered to cooperate in policy making, adding beneficial reforms to the military, trade and occasionally giving more power to the noble estates..\n\nMany have protested to not change the old ways, but their weight often made it too difficult to mount their horses and ride to the assemblies, causing the votes to, at times, be unanimous."
+  marchien_mobile_camps: "Mobile Camps"
+ marchien_mobile_camps_desc: "Travelling often takes the most amount of time in war, between gathering all the gem studded weaponry and fine pelts to cleaning up after feasts, our knights cannot possibly get to sieges on time. Some preposterous solution was proposed to not travel with all these possessions, but alas it was made by a peasant.\n\nInstead, many camp followers were recruited from local villages to travel alongside our soldiers, making camp, collecting belongings and providing any service the knights needed. Most complaints about this new system were that the knights did not have enough time to relax anymore and eat their precious wild boar."
+ marchien_powerful_inquisition: "Powerful Inquisition"
+ marchien_powerful_inquisition_desc: "In the fight against Sigilianism, many faiths have sprouted from its weak foundation, again proving the superiority of Eneratus in our millennia-long feud. To combat the increase of heresies, an inquisition was formed by the Eneratian church, primarily focused upon the hinterlands of Chilverchia to weed out the false teachings poisoning the minds of true Eneratian patriots.\n\nThe Marchien rulers have especially funded the inquisition to better deal with the rising faiths often appearing within their borders, who are quite adamant on dismantling the monarchical system that works so well for our marvellous royalty."
+ marchien_meticulous_husbandry: "Meticulous Husbandry"
+ marchien_meticulous_husbandry_desc: "To maintain the high quality of our cavalry, the main focus needs to be on the constitution of Chilverchian warhorses. Royal stables expanded, to provide more space for our growing military, and to allow for breeding of the finest steeds, ensuring our advantage on the fields against lesser mounts.\n\nNaysayers would note that the horses are now treated better than the peasantry, with more comfortable bedding and more flavourful food being provided for the horses. Yet others say that their steed has helped to win a war, more than any peasant could ever hope to do."
+
 
 ## Mechanics
 ability_chilverchian_march_assimilation_mechanic: "Chilverchian March Assimilation"
