--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -159,3 +159,7 @@
  RUIBANRION: "Ruibanríon"
  ARD_BANRION: "Ard Banríon"
 
+ whaling_ships_reform: "Whale Oil Enterprise"
+ whaling_ships_reform_desc: "The whale oil enterprise has become very profitable thanks to Dorchian merchant interests, imploring to expand the operations to the New World. Having many uses for commercial interests, the discovery of its flamability has been a great find for our military."
+ dorchia_increased_fish_chance_tt: "Increased chance of finding §YFish§! when colonizing"
+
