--- a/localisation/TD_01_flavour_fawud_l_english.yml
+++ b/localisation/TD_01_flavour_fawud_l_english.yml
@@ -26,23 +26,23 @@
  group_musarfic_ideas: "Musarfic Minor Ideas"
  group_musarfic_ideas_start: "Musarfic Minor Traditions"
  group_musarfic_ideas_bonus: "Musarfic Minor Ambition"
- musarfic_folk_law: "Folk Law"
- musarfic_folk_law_desc: "People of Fawud have a large number of unwritten laws, many of which seem so trivial there never was any need to compile them in a unified codex."
+ musarfic_folk_law: "Ancestral Laws"
+ musarfic_folk_law_desc: "The large set of complex laws is taught to the people of Fawud since their childhood. Despite never being written down in a coherent manner, they are known by every man and woman in the land, because of the fact, that they are seen as intrinsicly righteous commandments from the founding gods of all the clans."
  musarfic_family_bonds: "Clan Bonds"
- musarfic_family_bonds_desc: "Due to common practice of polygamy, musarfic families are quite extensive. This makes it that in the case of lack of viable male succesor, there almost always is someone from the family that can take the mantle."
- musarfic_fawudian_trade: "Fawudian Trade"
- musarfic_fawudian_trade_desc: "From Mustir Mountains, through Hariq and Fawud deserts, to highlands of Sayutala, the trade is always flowing. Harsh climate and barren soil makes moving goods across the desert only sensible profession."
- musarfic_cavalry_warfare: "Cavalry Warfare"
- musarfic_cavalry_warfare_desc: "Be it a horse or a camel, Man's best friend is his mount. They are mostly used as a way of transportation, but in the case of conflict musarfic cavalry is the most deadly in the world."
- musarfic_every_man_a_fighter: "Every Many a Fighter"
- musarfic_every_man_a_fighter_desc: "One of the few things that a person can do beside being clan ruler or a merchant is to serve as a warrior, participating in minor skirmishes and large wars."
+ musarfic_family_bonds_desc: "The practice of polygamy among our people has led to our families being vastly more expansive than in order nations. Most, if not all, members of our Usra are at least somewhat related to the current Abusra, making it very easy to find a suitable candidate, even in the case of the ruler not being able to produce an heir."
+ musarfic_fawudian_trade: "Transsahilan Trade"
+ musarfic_fawudian_trade_desc: "Many of our people are not merchants only because of harsh climate and barren soil, but also thanks to our advantageous position. From riverlands of Mesutia to Parroutan grasslands, from Sayutalan highlands to Lamedin, from Muzbah to Teneran desert, the trade is always flowing."
+ musarfic_cavalry_warfare: "Camelry and Cavalry"
+ musarfic_cavalry_warfare_desc: "Be it a horse or a camel, Man's best friend is his trusted mount. Often raised by their raiders from a very young age, They are mostly trained as a mean of transportation of people and goods, but in the case of war our mounts are guaranteed to effectively disrupt enemy's forces."
+ musarfic_every_man_a_fighter: "Every Man a Warrior"
+ musarfic_every_man_a_fighter_desc: "One of the few things that a person can do beside being a ruling monarch of the clan or a caravaneer travelling to foreign lands is to serve the Usra as a warrior, participating in minor skirmishes and large wars. Even those that wish to live a more peaceful lifestyle are called as a levy to serve the clan in any conflict."
  musarfic_clan_rivalry: "Usra Rivalry"
- musarfic_clan_rivalry_desc: "Even minor conflicts and grudges between usras can still be remembered after many generations. This creates a constant state of tension between clans, only waiting for a larger conflict to erupt so they can finally show that their clan obviously are the legitimate rulers of a camel that died 100 years ago."
+ musarfic_clan_rivalry_desc: "Even minor conflict and grudge between the Usras is still remembered after many generations have passed. This creates a constant state of tension between clans, only waiting for a larger conflict to erupt, so that they can finally show everyone their obvious and legitimate claim to a camel that died a hundred years ago."
  musarfic_tame_the_desert: "Tame the Desert"
- musarfic_tame_the_desert_desc: "Harsh cliamte, scorching sand and barren soil are most common causes of fawud being so underdeveloped. Urbanising the desert is the first step of building musarfic glory on the world stage."
+ musarfic_tame_the_desert_desc: "Large and varied desert of Fawud has been a home of our people for as long as we can remember. Over the course of centuries we adapted to not only survive in these harsh lands, but we also learned how to exploit it to its fullest benefit. Cities are being built in mountainsides and new oases are being found, making this land more viable for people than ever."
  
  alab: "Alab"
- alab_desc: "Primordial god of Earth, father of every other deity."
+ alab_desc: "Primordial god of Earth, father of all Musarfic Deities."
  mayha: "Mayha"
  mayha_desc: "Primordial goddess of water, wife of Alab"
  eyina: "Eyina"
